add "more info" link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <div id="drawing"></div>
     <div id="input">
+      <div id="more-info">
+        <a href="https://github.com/MarkLodato/enigma">(more info)</a>
+      </div>
       <label for="rotor_order">
         <span>Rotor Order</span>
         <input id="rotor_order" value="I-II-III">
